--- a/src/css/style.css
+++ b/src/css/style.css
@@ -252,6 +252,7 @@ body {
     border: 2px solid #EEF0EA;
     padding: 8px;
     cursor: pointer;
+    margin-bottom: 50px;
 }
 
 .custom-thumbnail:hover {
@@ -307,7 +308,7 @@ body {
 }
 
 .custom-carousel-indicators2 {
-    bottom: -70px;
+    bottom: -20px;
 }
 
 .custom-carousel-indicators2>li {
@@ -319,4 +320,39 @@ body {
 
 .custom-carousel-indicators2>li.active {
     background-color: #565656;
+}
+
+.panel {
+    border: 4px solid #EEF0EA;
+    border-radius: 2px;
+    padding: 20px;
+}
+
+.panel h4,
+.panel .price {
+    font-size: 130%;
+    margin-bottom: 15px;
+    margin-top: 0;
+}
+
+.custom-text-muted {
+    color: #A9A9A9;
+}
+
+.arrow-btn {
+    background-color: #fff;
+    color: #868686;
+    border: 1px solid #EBEBEB;
+    padding: 5px 10px;
+    border-radius: 2px;
+    font-size: 12px;
+}
+
+#row-brand h3.heading {
+    border-top: 1px solid #EEF0EA;
+    padding-top: 25px;
+}
+
+.panel .col-4 img {
+    height: 145px;
 }
