--- a/src/css/style.css
+++ b/src/css/style.css
@@ -458,6 +458,124 @@ body {
     box-shadow: none;
 }
 
+    /*product page*/
+
+.custom-breadcrumb {
+    padding: 25px 0;
+}
+
+.custom-breadcrumb a {
+    color: #555;
+    text-decoration: none;
+}
+
+.custom-breadcrumb a:hover {
+    color: #f8ab47;
+}
+
+.custom-breadcrumb>li::before {
+    color: #f8ab47 !important;
+}
+
+.custom-breadcrumb .active {
+    color: #bfbfbf;
+}
+
+#carousel-product-images .carousel-indicators {
+    position: absolute;
+    top: 92%;
+    right: 0;
+}
+
+#carousel-product-images .carousel-item img {
+    width: 100%;
+    height: auto;
+    border: 1px solid #ebebeb;
+}
+
+.product-category {
+    color: #a9a9a9;
+}
+
+#form-product-selection h2 {
+    font-weight: 700;
+    margin: 18px 0;
+}
+
+.price.large {
+    font-size: 30px;
+    margin-top: 20px;
+}
+
+.borders-between>div+div {
+    border-top: 1px solid #ebebeb;
+    padding: 15px 0;
+}
+
+.product-option {
+    display: inline-block;
+    width: 23px;
+    height: 23px;
+    border: 1px solid #ebebeb;
+    text-align: center;
+    justify-content: center;
+    color: #c2c2c2;
+    margin: 3px;
+    font-weight: 700;
+}
+
+.product-option input {
+    display: none;
+}
+
+.product-option.active {
+    color: #f8ad47;
+    border-color: #f8ad47;
+}
+
+.color-option.active {
+    border-color: #fff;
+    outline: #000 solid 1px;
+}
+
+.product-quantity select {
+    height: 34px !important;
+    padding: 6px 12px;
+    margin-right: 5px;
+}
+
+.custom-btn-with-icon {
+    margin: 15px 0;
+    font-size: 18px;
+    padding: 5px 10px;
+}
+
+.heading-with-border-bottom {
+    border-bottom: 1px solid #ebebeb;
+    padding-bottom: 15px;
+}
+
+.heading-inline {
+    display: inline-block;
+    min-width: 250px;
+}
+
+.more-description p,
+.more-description ul {
+    margin-bottom: 10px;
+}
+
+.comments .comment img {
+    width: 80px;
+    height: 80px;
+    margin-left: 10px;
+    border: 1px solid #dfdfdf;
+}
+
+.comments .comment h4 {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
 
 
 
@@ -568,6 +686,18 @@ body {
         margin-top: 10px;
     }
 
+    .product-images {
+        margin-bottom: 70px;
+    }
+
+    .product-option {
+        width: 40px;
+        height: 40px;
+        line-height: 40px;
+        font-size: 20px;
+        margin: 10px;
+    }
+
  }
 
  @media (max-width: 767.98px) {
@@ -621,6 +751,11 @@ body {
 
     #brand-logos .img-container img {
         margin: 5px 15px;
+    }
+
+    #form-product-selection,
+    .comments {
+        padding-right: 15px;
     }
 }
 
