--- a/src/css/style.css
+++ b/src/css/style.css
@@ -643,6 +643,17 @@ h1.custom-heading {
 }
 
 
+/*---------payment page---------*/
+
+.custom-input-details {
+    border-width: 2px;
+    border-radius: 3px;
+    height: 46px !important;
+    width: 98%;
+    font-size: 18px;
+    padding: 0 16px;
+}
+
 
  @media (max-width: 1399.98px) {
 
